# skills-google-scrapper

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SWIFT_CONVERSION_SUMMARY.md  TODO.md  appinfo.md  build.sh  config.example.yaml  justfile  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  launch.json
CSBHelperApp/: Package.swift
CSBHelperApp/Sources/CSBHelperApp/: ContentView.swift  main.swift
CSBHelperApp/Sources/CSBHelperApp/Views/: CoursesView.swift  LabsView.swift  PathsView.swift  SearchView.swift  SettingsView.swift  TopicsView.swift
CSBHelperSwift/: Package.swift  README.md
CSBHelperSwift/Sources/CSBHelperCLI/: main.swift
CSBHelperSwift/Sources/CSBHelperCore/Models/: BaseEntity.swift  Collections.swift  Course.swift  Lab.swift  Path.swift
CSBHelperSwift/Sources/CSBHelperCore/Services/: DataService.swift
CSBHelperSwift/Tests/CSBHelperCoreTests/: ModelTests.swift
app/: app.py  graph.py  main.py  requirements.txt  scraper.py
app/config/: settings.py  user_config.py
app/models/: base_entity.py  collection.py  course.py  courses.py  lab.py  labs.py  path.py  paths.py  serialize.py  topics.py
app/services/: browser_endpoint.py  data_management.py  database.py  launch_browser.py  md_helper.py  migration.py
app/templates/: about.html  graph.html
app/templates/google_skills/: course-72-modules.json  course-72-ql-contents-menu.html  course-72.html  video-613054-qt-youtube-video.html  video-613054.html
app/templates/partner/: 104653.html  35.html  4343.html
app/tests/: utils_test.py
app/utils/: completeness.py  logx.py  utils.py
csbmdvault/.obsidian/: appearance.json  community-plugins.json
docs/: getting-started.md  installation.md  rewrite-plan.md  usage.md
go/: .gitignore  README.md  go.mod  main.go
go/internal/browser/: actions.go  browser.go  browser_test.go  connretry_test.go  endpoint.go
go/internal/cli/: auth.go  browser.go  cli.go  complete.go  course_fetch.go  db.go  fetch.go  fetch_test.go  interactive.go  json.go  list.go  login.go  md.go  mdpath.go  path_fetch.go  pdf.go  reindex.go  search.go  signal.go  stubs.go
go/internal/config/: config.go  config_test.go
go/internal/logx/: logx.go  logx_test.go
go/internal/mdgen/: mdgen.go
go/internal/model/: entity.go  methods.go  ordered.go
go/internal/pdfgen/: pdfgen.go
go/internal/portal/: portal.go
go/internal/scrape/: canonical.go  canonical_test.go  course.go  course_path_test.go  external.go  lab.go  lab_test.go  path.go
go/internal/scrape/testdata/: partner_course_32.html  partner_path_89.html
go/internal/store/: db.go  manage.go  reindex.go  save.go  save_course.go  store.go  store_test.go
go/internal/textutil/: textutil.go
gui/: .gitignore  README.md
gui/src/: index.html  main.js  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: main.rs
theme/humanist/: template.typ  theme.yaml
theme/newsprint/: base.user.css  newsprint-comfortaa-lora.user.css
