[project]
name = "csbhelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4~=4.12.0",
    "debugpy>=1.8.20",
    "flask~=3.1.0",
    "gunicorn>=25.1.0",
    "html2text>=2025.4.15",
    "requests~=2.32.3",
    "selenium>=4.40.0",
    "tinydb~=4.8.0",
]
