[project]
name = "csbhelper"
version = "2.1.0"
description = "A CLI/interactive scraper that turns Google Skills courses, paths, and labs (public and partner portals) into a Markdown knowledge base."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4~=4.12.0",
    "debugpy>=1.8.20",
    "html2text>=2025.4.15",
    "requests~=2.32.3",
    "selenium>=4.40.0",
    "tinydb~=4.8.0",
]
