[project]
name = "csbhelper"
version = "2.1.0"
description = "A CLI/interactive scraper that turns Google Skills courses, paths, and labs (public and partner portals) into a Markdown knowledge base."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4~=4.12.0",
    "debugpy>=1.8.20",
    "html2text>=2025.4.15",
    "requests~=2.32.3",
    "selenium>=4.40.0",
    "tinydb~=4.8.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
]

[tool.basedpyright]
# main.py/scraper.py append 'app/' to sys.path at runtime, so modules import
# each other as top-level packages (e.g. `from models.course import Course`)
# rather than via the repo root. Tell the checker the same thing.
extraPaths = ["app"]

# main.py and scraper.py intentionally import each other: scraper.py reuses
# main.py's command handlers (cmd_fetch, cmd_search, ...) for its interactive
# menu, and main.py's `interactive` command launches scraper.py. Both sides
# already defer the import to inside a function body (not module level)
# specifically to avoid the runtime circular-import error, so the cycle this
# rule detects is real but deliberate and harmless. A per-file
# `# pyright: reportImportCycles=false` comment does not suppress this
# diagnostic (it's reported against the whole import graph, not a line), so
# it's disabled here instead.
reportImportCycles = false
