[package]
name = "csb-gui"
version = "0.1.0"
description = "Desktop GUI for the Cloud Skills Boost scraper"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "csb-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
