[package]
name = "csb-gui"
version = "2.16.1"
description = "Desktop GUI for Skills Scraper"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "csb-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
# Strip debug symbols from the binary
strip = "symbols"

# Optimize heavily for the smallest possible binary size
opt-level = "z"

# Merge and optimize cross-crate dead code
lto = "fat"
